salesforce/force-app/main/default/objects/Outreach_Setting__mdt/Outreach_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Outreach Setting</label>
    <pluralLabel>Outreach Settings</pluralLabel>
    <description>Non-secret outreach configuration. Secrets (the Twilio auth token) live ONLY in the Twilio Named Credential — never here, never in Custom Settings.</description>
</CustomObject>