salesforce/force-app/main/default/objects/Outreach_Setting__mdt/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <label>From Number</label>
    <description>E.164 sending number (10DLC-registered).</description>
    <type>Text</type>
    <length>20</length>
</CustomField>