salesforce/force-app/main/default/objects/Outreach_Setting__mdt/fields/Per_Number_Hourly_Limit__c.field-meta.xml
<CustomField>
    <fullName>Per_Number_Hourly_Limit__c</fullName>
    <label>Per Number Hourly Limit</label>
    <description>Max outbound messages per sending number per hour. Defaults well under starter 10DLC daily tiers.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>