salesforce/force-app/main/default/objects/Outreach_Setting__mdt/fields/Twilio_Account_SID__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Account_SID__c</fullName>
    <label>Twilio Account SID</label>
    <description>Account identifier used in the callout path. Not a secret; the auth token is in the Named Credential.</description>
    <type>Text</type>
    <length>64</length>
</CustomField>