salesforce/force-app/main/default/objects/Outreach_Setting__mdt/fields/Use_Mock_Provider__c.field-meta.xml
<CustomField>
    <fullName>Use_Mock_Provider__c</fullName>
    <label>Use Mock Provider</label>
    <description>Load-test switch (ADR-021): route sends to MockMessagingProvider (no callouts, no credits). Only honored in sandbox/scratch orgs — production ignores it by design.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>