salesforce/force-app/main/default/objects/Outreach_Setting__mdt/fields/Webhook_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Base_Url__c</fullName>
    <label>Webhook Base URL</label>
    <description>Public base URL of the webhook Site as configured in the Twilio console, up to but not including /twilio/... (e.g. https://x.my.salesforce-sites.com/services/apexrest). Twilio signs the exact URL it calls; validation reconstructs it from this value plus the request URI.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>